# md-convert

./: .gitignore  CHANGE_LOGS.md  README.md  config.ini  pyproject.toml  requirements.txt
src/: config.py  converter.py  main.py  md_converter.py
src/error/: __init__.py  main.py
src/plugins/ecv_pdf_converter/: __init__.py  _main.py
src/plugins/ecv_pdf_converter/utils/: __init__.py  _format_row.py  _process_page.py  _process_page_legacy.py  _to_markdown_table.py
src/utils/: __init__.py  _list_files_in_folder.py  to_chunks.py
test/: docling_pdf_reader.test.py  md_convert.test.py
