[project]
name = "md_converter"
version = "0.2.0"
description = "Tool chuyển đổi nhanh các file tài liệu thành Markdown"
authors = [
    { name = "Tuan Nguyen", email = "tuan.nguyen@ecloudvalley.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "markitdown[all]",
    "docling==2.63.0",
    "pdfplumber==0.11.8"
]

[project.optional-dependencies]
dev = [
    "rich==14.2.0"
]
